--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <title>Random WORD</title>
 
-    <script src="/index.js" defer></script>
+    <script src="./index.js" defer></script>
     <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
