--- a/index.html
+++ b/index.html
@@ -38,32 +38,41 @@
         </ul>
       </nav>
 
-      <h1 id="to-save">Review Your Vocabulary</h1>
+      <h1 id="to-save">Students Points</h1>
       <section class="students">
         <button class="item" id="@item1">
-          Lucas<span class="count"></span>
+          Selina<span class="count"></span>
         </button>
         <button class="item" id="@item2">
-          Grace<span class="count"></span>
+          Gina<span class="count"></span>
         </button>
         <button class="item" id="@item3">
-          Tony<span class="count"></span>
+          <span class="count"></span>
         </button>
         <button class="item" id="@item4">
           Eason<span class="count"></span>
         </button>
         <button class="item" id="@item5">
-          Dora<span class="count"></span>
+          Grace<span class="count"></span>
         </button>
         <button class="item" id="@item6">
-          Tanya<span class="count"></span>
+          Dora<span class="count"></span>
         </button>
-        <button class="item" id="@item7">Eva<span class="count"></span></button>
+        <button class="item" id="@item7">
+          Lucas<span class="count"></span>
+        </button>
         <button class="item" id="@item8">
-          Selina<span class="count"></span>
+          Tony<span class="count"></span>
         </button>
-        <button class="item" id="@item9">
-          Gina<span class="count"></span>
+        <button class="item" id="@item9"><span class="count"></span></button>
+        <button class="item" id="@item10">
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@item11">
+          Eva<span class="count"></span>
+        </button>
+        <button class="item" id="@item12">
+          Tanya<span class="count"></span>
         </button>
       </section>
       <button class="output">Random WORD</button>
@@ -140,6 +149,7 @@
           <button class="createNew" id="createNew">New List</button>
         </div>
       </section>
+      <button class="resetPoints">Reset Points</button>
     </main>
   </body>
 </html>
