updated absent kids function

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </ul>
       </nav>
 
-      <h1 id="to-save">Students Points</h1>
+      <!-- <h1 id="to-save">Students Points</h1> -->
       <section class="students">
         <button class="item" id="@item1">
           Selina<span class="count"></span>
