--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
           Gina<span class="count"></span>
         </button>
         <button class="item" id="@item3">
-          <span class="count"></span>
+          Eddie<span class="count"></span>
         </button>
         <button class="item" id="@item4">
           Eason<span class="count"></span>
         </button>
         <button class="item" id="@item5">
-          Grace<span class="count"></span>
+          Dora<span class="count"></span>
         </button>
         <button class="item" id="@item6">
-          Dora<span class="count"></span>
+          Joanna<span class="count"></span>
         </button>
         <button class="item" id="@item7">
           Lucas<span class="count"></span>
@@ -64,7 +64,9 @@
         <button class="item" id="@item8">
           Tony<span class="count"></span>
         </button>
-        <button class="item" id="@item9"><span class="count"></span></button>
+        <button class="item" id="@item9">
+          Jenny<span class="count"></span>
+        </button>
         <button class="item" id="@item10">
           <span class="count"></span>
         </button>
@@ -73,6 +75,18 @@
         </button>
         <button class="item" id="@item12">
           Tanya<span class="count"></span>
+        </button>
+        <button class="item" id="@item12">
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@item12">
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@item12">
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@item12">
+          <span class="count"></span>
         </button>
       </section>
       <button class="output">Random WORD</button>
@@ -100,14 +114,16 @@
           </button>
 
           <ul>
-            <li>struguri</li>
-            <li>capsuni</li>
-            <li>portocale</li>
-            <li>mere</li>
-            <li>pepene de vara</li>
-            <li>prune</li>
-            <li>kiwi</li>
-            <li>piersici</li>
+            <li>pull</li>
+            <li>passed</li>
+            <li>symbol</li>
+            <li>marched</li>
+            <li>(not) unless</li>
+            <li>statues</li>
+            <li>patch</li>
+            <li>curious</li>
+            <li>shove</li>
+            <li>giant</li>
           </ul>
         </section>
       </article>
