--- a/index.html
+++ b/index.html
@@ -61,23 +61,51 @@
         <button class="item" id="@Jenny">
           Jenny<span class="count"></span>
         </button>
-        <button class="item" id="@student1">
-          <span class="count"></span>
+        <button class="item" id="@Sharon">
+          Sharon<span class="count"></span>
         </button>
         <button class="item" id="@Eva">Eva<span class="count"></span></button>
         <button class="item" id="@Tanya">
           Tanya<span class="count"></span>
         </button>
-        <button class="item" id="@student2">
+        <button class="item" id="@Emma">
+          Emma
           <span class="count"></span>
         </button>
-        <button class="item" id="@student3">
+        <button class="item" id="@Grace">
+          Grace
           <span class="count"></span>
         </button>
-        <button class="item" id="@student4">
+        <button class="item" id="@Mia">
+          Mia
           <span class="count"></span>
         </button>
-        <button class="item" id="@student5">
+        <button class="item" id="@Selina">
+          Selina
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Carissa">
+          Carissa
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Pauline">
+          Pauline
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Charlotte">
+          Charlotte
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Daniel">
+          Daniel
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Cathy">
+          Cathy
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Jerry">
+          Jerry
           <span class="count"></span>
         </button>
       </section>
