--- a/public/index.html
+++ b/public/index.html
@@ -4,82 +4,165 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Geolocation</title>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/images/favicon-32x32.png"
+      href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Grandstander:wght@400;800&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/bb8e411a96.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="/FA-6/css/all.css" />
+
+    <title>Random WORD</title>
+
+    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>Your coordinates are:</p>
-    <p>Latitude: <span id="lat"></span>&deg;</p>
-    <p>Longitude: <span id="lon"></span>&deg;</p>
-    <label for="vegetable">What is your favorite vegetable</label>
-    <input type="text" id="vegetable" />
-    <button id="submit">Submit</button>
-    <button id="getData">Get Data</button>
-    <button id="eraseData">Erase</button>
-    <script>
-      let latitude, longitude, vegetable;
-      const button = document.getElementById("submit");
-      button.addEventListener("click", async (event) => {
-        vegetable = document.getElementById("vegetable").value;
-        const data = { latitude, longitude, vegetable };
-        const options = {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/JSON",
-          },
-          body: JSON.stringify(data),
-        };
-        const response = await fetch("/api", options);
-        const json = await response.json();
-        console.log(json);
-        document.getElementById("lat").textContent = latitude;
-        document.getElementById("lon").textContent = longitude;
-      });
+    <main>
+      <!-- hide logo for now -->
+      <!--  <nav class="nav">
+        <div><img src="/images/logo.png" class="nav__logo" alt="" /></div>
+        <ul>
+          <li><a href="#to-save">Home</a></li>
+          <li><a href="#random">Second</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav> -->
 
-      if ("geolocation" in navigator) {
-        console.log("geolocation available");
-        navigator.geolocation.getCurrentPosition(async (position) => {
-          latitude = position.coords.latitude;
-          longitude = position.coords.longitude;
-        });
-      } else {
-        console.log("geolocation not available");
-      }
-      document.getElementById("getData").addEventListener("click", getData);
-      document.getElementById("eraseData").addEventListener("click", eraseData);
-      //why do they appear in such weird order?
-      let root;
-      async function eraseData() {
-        console.log(root);
-        document.querySelectorAll(".root").forEach((e) => e.remove());
-      }
-      async function getData() {
-        const response = await fetch("/api");
-        const data = await response.json();
-        console.log(data);
+      <!-- <h1 id="to-save">Students Points</h1> -->
+      <section class="students">
+        <button class="item" id="@Selina">
+          Selina<span class="count"></span>
+        </button>
+        <button class="item" id="@Gina">Gina<span class="count"></span></button>
+        <button class="item" id="@Eddie">
+          Eddie<span class="count"></span>
+        </button>
+        <button class="item" id="@Eason">
+          Eason<span class="count"></span>
+        </button>
+        <button class="item" id="@Dora">Dora<span class="count"></span></button>
+        <button class="item" id="@Joanna">
+          Joanna<span class="count"></span>
+        </button>
+        <button class="item" id="@Lucas">
+          Lucas<span class="count"></span>
+        </button>
+        <button class="item" id="@Tony">Tony<span class="count"></span></button>
+        <button class="item" id="@Jenny">
+          Jenny<span class="count"></span>
+        </button>
+        <button class="item" id="@Sharon">
+          Sharon<span class="count"></span>
+        </button>
+        <button class="item" id="@Eva">Eva<span class="count"></span></button>
+        <button class="item" id="@Tanya">
+          Tanya<span class="count"></span>
+        </button>
+        <button class="item" id="@Emma">
+          Emma
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Grace">
+          Grace
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Mia">
+          Mia
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Selina">
+          Selina
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Carissa">
+          Carissa
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Pauline">
+          Pauline
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Charlotte">
+          Charlotte
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Daniel">
+          Daniel
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Cathy">
+          Cathy
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Jerry">
+          Jerry
+          <span class="count"></span>
+        </button>
+      </section>
+      <button class="output" id="randomWord">Random WORD</button>
+      <button class="output" id="randomStudent">Student</button>
 
-        for (item of data) {
-          root = document.createElement("div");
-          root.classList.add("root");
-          const vegetable = document.createElement("p");
-          const date = document.createElement("p");
-          const geo = document.createElement("p");
-
-          vegetable.textContent = `vegetable: ${item.vegetable}`;
-          geo.textContent = `${item.latitude}°, ${item.longitude}°`;
-          const dateString = new Date(item.timestamp).toLocaleString();
-          date.textContent = dateString;
-
-          root.append(vegetable, date, geo);
-          document.body.append(root);
-        }
-      }
-    </script>
+      <div id="collection"></div>
+      <section>
+        <button class="collapsible">Week 1</button>
+        <div class="weekX">
+          <ul>
+            <li>unu</li>
+            <li>doi</li>
+            <li>trei</li>
+            <li>patru</li>
+            <li>patrucincisase</li>
+            <li>patrucincisase</li>
+            <li>patrucincisase</li>
+          </ul>
+          <button class="addToRoster">
+            <i class="fa-regular fa-circle-check"></i>
+          </button>
+        </div>
+        <button class="collapsible">Week 1</button>
+        <div class="weekX">
+          <ul>
+            <li>unu</li>
+            <li>doi</li>
+            <li>trei</li>
+            <li>patru</li>
+            <li>patrucincisase</li>
+            <li>patrucincisase</li>
+            <li>patrucincisase</li>
+          </ul>
+          <button class="addToRoster">
+            <i class="fa-regular fa-circle-check"></i>
+          </button>
+        </div>
+      </section>
+      <section class="input">
+        <label for="key" class="hidden">Title:</label>
+        <input type="text" name="key" id="key" placeholder="your title here" />
+        <label class="hidden" for="word-list">Words:</label>
+        <textarea
+          placeholder="Add your words separated by comma, space or a new line"
+          name="word list"
+          id="word-list"
+          cols="20"
+          rows="10"
+        ></textarea>
+        <div class="buttons">
+          <button id="instructions">Toggle instructions</button>
+          <button class="createNew" id="createNew">New List</button>
+        </div>
+      </section>
+      <button id="resetPoints">Reset Points</button>
+    </main>
   </body>
 </html>
