change order of students

--- a/index.html
+++ b/index.html
@@ -41,37 +41,31 @@
 
       <!-- <h1 id="to-save">Students Points</h1> -->
       <section class="students">
-        <button class="item" id="@Selina">
-          Selina<span class="count"></span>
-        </button>
-        <button class="item" id="@Gina">Gina<span class="count"></span></button>
-        <button class="item" id="@Eddie">
-          Eddie<span class="count"></span>
-        </button>
-        <button class="item" id="@Eason">
-          Eason<span class="count"></span>
-        </button>
-        <button class="item" id="@Dora">Dora<span class="count"></span></button>
-        <button class="item" id="@Joanna">
-          Joanna<span class="count"></span>
-        </button>
-        <button class="item" id="@Lucas">
-          Lucas<span class="count"></span>
-        </button>
         <button class="item" id="@Tony">Tony<span class="count"></span></button>
-        <button class="item" id="@Jenny">
-          Jenny<span class="count"></span>
-        </button>
-        <button class="item" id="@Sharon">
-          Sharon<span class="count"></span>
-        </button>
-        <button class="item" id="@Eva">Eva<span class="count"></span></button>
-        <button class="item" id="@Tanya">
-          Tanya<span class="count"></span>
+        <button class="item" id="@Jerry">
+          Jerry
+          <span class="count"></span>
         </button>
         <button class="item" id="@Emma">
           Emma
           <span class="count"></span>
+        </button>
+        <button class="item" id="@Eason">
+          Eason<span class="count"></span>
+        </button>
+        <button class="item" id="@Eddie">
+          Eddie<span class="count"></span>
+        </button>
+        <button class="item" id="@Gina">Gina<span class="count"></span></button>
+        <button class="item" id="@Joanna">
+          Joanna<span class="count"></span>
+        </button>
+        <button class="item" id="@Daniel">
+          Daniel
+          <span class="count"></span>
+        </button>
+        <button class="item" id="@Lucas">
+          Lucas<span class="count"></span>
         </button>
         <button class="item" id="@Grace">
           Grace
@@ -81,33 +75,43 @@
           Mia
           <span class="count"></span>
         </button>
+        <button class="item" id="@Cathy">
+          Cathy
+          <span class="count"></span>
+        </button>
+        <button class="item" id=""><span class="count"></span></button>
+        <button class="item" id="@Eva">Eva<span class="count"></span></button>
+        <button class="item" id="@Pauline">
+          Pauline
+          <span class="count"></span>
+        </button>
         <button class="item" id="@Selina">
-          Selina
+          Selina<span class="count"></span>
+        </button>
+        <button class="item" id="@Dora">Dora<span class="count"></span></button>
+        <button class="item" id=""><span class="count"></span></button>
+        <button class="item" id="@Sharon">
+          Sharon<span class="count"></span>
+        </button>
+        <button class="item" id="@Tanya">
+          Tanya<span class="count"></span>
+        </button>
+        <button class="item" id="@Charlotte">
+          Charlotte
           <span class="count"></span>
         </button>
         <button class="item" id="@Carissa">
           Carissa
           <span class="count"></span>
         </button>
-        <button class="item" id="@Pauline">
-          Pauline
+        <button class="item" id="">
           <span class="count"></span>
         </button>
-        <button class="item" id="@Charlotte">
-          Charlotte
+        <button class="item" id="">
           <span class="count"></span>
         </button>
-        <button class="item" id="@Daniel">
-          Daniel
-          <span class="count"></span>
-        </button>
-        <button class="item" id="@Cathy">
-          Cathy
-          <span class="count"></span>
-        </button>
-        <button class="item" id="@Jerry">
-          Jerry
-          <span class="count"></span>
+        <button class="item" id="@Jenny">
+          Jenny<span class="count"></span>
         </button>
       </section>
       <button class="output" id="randomWord">Random WORD</button>
@@ -118,13 +122,30 @@
         <button class="collapsible">Week 1</button>
         <div class="weekX">
           <ul>
-            <li>unu</li>
-            <li>doi</li>
-            <li>trei</li>
-            <li>patru</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
+            <li>burglar</li>
+            <li>chase</li>
+            <li>goal</li>
+            <li>fall over</li>
+            <li>drum</li>
+            <li>be thankful for</li>
+            <li>Morse code</li>
+            <li>distance</li>
+            <li>plane</li>
+            <li>light</li>
+            <li>Semaphore</li>
+            <li>be used to (+Ving)</li>
+            <li>postal system</li>
+            <li>flags</li>
+            <li>treasure</li>
+            <li>explosion</li>
+            <li>quill</li>
+            <li>be willing to</li>
+            <li>target</li>
+            <li>nightmare</li>
+            <li>peacefully</li>
+            <li>hallway</li>
+            <li>lift</li>
+            <li>be worried about</li>
           </ul>
           <button class="addToRoster">
             <i class="fa-regular fa-circle-check"></i>
