--- a/public/second.html
+++ b/public/second.html
@@ -15,101 +15,100 @@
     />
   </head>
   <body>
-    <header><a href="index.html">Home</a></header>
-    <h1>Children's points</h1>
+    <header><a class="nav-link" href="index.html">Home</a></header>
+    <h1>Student's points</h1>
     <section>
-      <h2>4A</h2>
-      <!-- table id="table">
-        <tr>
-          <th></th>
-          <th>Carissa</th>
-          <th>Eason</th>
-          <th>Ema</th>
-          <th>Mia</th>
-          <th>Selina</th>
-          <th>Dora</th>
-          <th>Grace</th>
-          <th>Tanya</th>
-          <th id="@Eddie">Eddie</th>
-          <th>Jerry</th>
-          <th>Jenny</th>
-          <th>Joanna</th>
-          <th>Charlotte</th>
-          <th>Cathy</th>
-          <th>Gina</th>
-          <th>Pauline</th>
-        </tr>
-      </table> -->
-      <button id="getData">Show Data from db to Table</button>
-      <table>
+      <table id="pointsTable">
         <thead>
           <tr id="appendDate">
             <th></th>
+            <th>Total</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td class="student">Carissa</td>
+            <td class="studentJS">Carissa</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Cathy</td>
+            <td class="studentJS">Cathy</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Charlotte</td>
+            <td class="studentJS">Charlotte</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Daniel</td>
+            <td class="studentJS">Daniel</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Dora</td>
+            <td class="studentJS">Dora</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Eason</td>
+            <td class="studentJS">Eason</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Eddie</td>
+            <td class="studentJS">Eddie</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Emma</td>
+            <td class="studentJS">Emma</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Eva</td>
+            <td class="studentJS">Eva</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Gina</td>
+            <td class="studentJS">Gina</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Grace</td>
+            <td class="studentJS">Grace</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Jenny</td>
+            <td class="studentJS">Jenny</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Jerry</td>
+            <td class="studentJS">Jerry</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Joanna</td>
+            <td class="studentJS">Joanna</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Lucas</td>
+            <td class="studentJS">Lucas</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Mia</td>
+            <td class="studentJS">Mia</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Pauline</td>
+            <td class="studentJS">Pauline</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Selina</td>
+            <td class="studentJS">Selina</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Sharon</td>
+            <td class="studentJS">Sharon</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Tanya</td>
+            <td class="studentJS">Tanya</td>
+            <td class="total"></td>
           </tr>
           <tr>
-            <td class="student">Tony</td>
+            <td class="studentJS">Tony</td>
+            <td class="total"></td>
           </tr>
         </tbody>
       </table>
