--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </nav> -->
 
       <!-- <h1 id="to-save">Students Points</h1> -->
-
+      <h1>Rocking it!</h1>
       <section class="students">
         <button class="studentJS itemCSS" name="Tony" id="@Tony">
           Tony<span class="count"></span><span class="reduce">-</span>
