cosmetic changes to index and second

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header>
-      <a class="nav-link" href="second.html">Past scores</a>
+      <a class="nav-link" href="second.html">📅</a>
     </header>
     <main>
       <!-- hide logo for now -->
@@ -43,93 +43,101 @@
       </nav> -->
 
       <!-- <h1 id="to-save">Students Points</h1> -->
-      <h1>Rocking it!</h1>
-      <h1>Rocking it!</h1>
-      <h1>Rocking it!</h1>
-      <h1>Rocking it!</h1>
       <section class="students">
         <button class="studentJS itemCSS" name="Tony" id="@Tony">
-          Tony<span class="count"></span><span class="reduce">-</span>
+          Tony<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Jerry">
           Jerry
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Emma">
           Emma
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Eason">
-          Eason<span class="count"></span><span class="reduce">-</span>
+          Eason<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Eddie">
-          Eddie<span class="count"></span><span class="reduce">-</span>
+          Eddie<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Gina">
-          Gina<span class="count"></span><span class="reduce">-</span>
+          Gina<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Joanna">
-          Joanna<span class="count"></span><span class="reduce">-</span>
+          Joanna<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Daniel">
           Daniel
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Lucas">
-          Lucas<span class="count"></span><span class="reduce">-</span>
+          Lucas<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Grace">
           Grace
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
 
         <button class="studentJS itemCSS" id="@Mia">
           Mia
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
 
         <button class="studentJS itemCSS" id="@Cathy">
           Cathy
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="itemCSS" id="" disabled></button>
         <button class="studentJS itemCSS" id="@Eva">
-          Eva<span class="count"></span><span class="reduce">-</span>
+          Eva<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Pauline">
           Pauline
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Selina">
-          Selina<span class="count"></span><span class="reduce">-</span>
+          Selina<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Dora">
-          Dora<span class="count"></span><span class="reduce">-</span>
+          Dora<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="itemCSS" id="" disabled></button>
         <button class="studentJS itemCSS" id="@Sharon">
-          Sharon<span class="count"></span><span class="reduce">-</span>
+          Sharon<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Tanya">
-          Tanya<span class="count"></span><span class="reduce">-</span>
+          Tanya<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Charlotte">
           Charlotte
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Carissa">
           Carissa
-          <span class="count"></span><span class="reduce">-</span>
+          <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="itemCSS" id="" disabled></button>
         <button class="itemCSS" id="" disabled></button>
         <button class="studentJS itemCSS" id="@Jenny">
-          Jenny<span class="count"></span><span class="reduce">-</span>
+          Jenny<span class="count"></span><span class="reduce">⭐</span>
         </button>
       </section>
-      <button class="output" id="randomWord">Random WORD</button>
-      <button class="output" id="randomStudent">Student</button>
+      <div class="randomStuff">
+        <div>
+          <button class="output" id="randomWord">WORD</button>
+        </div>
+        <div>
+          <button class="output" id="randomStudent">Student</button>
+        </div>
+      </div>
 
+      <div class="buttons">
+        <button id="instructions">Toggle instructions</button>
+        <button class="createNew" id="createNew">New List</button>
+        <button id="resetPoints">Reset Points</button>
+        <button id="submitToMongodb">Submit to mongodb</button>
+      </div>
       <div id="collection"></div>
       <section>
         <button class="collapsible">Week 1</button>
@@ -154,11 +162,11 @@
             <li>quill</li>
             <li>be willing to</li>
             <li>target</li>
+            <li>be worried about</li>
             <li>nightmare</li>
             <li>peacefully</li>
             <li>hallway</li>
             <li>lift</li>
-            <li>be worried about</li>
           </ul>
           <button class="addToRoster">
             <i class="fa-regular fa-circle-check"></i>
@@ -191,13 +199,6 @@
           cols="20"
           rows="10"
         ></textarea>
-
-        <div class="buttons">
-          <button id="instructions">Toggle instructions</button>
-          <button class="createNew" id="createNew">New List</button>
-          <button id="resetPoints">Reset Points</button>
-          <button id="submitToMongodb">Submit to mongodb</button>
-        </div>
       </section>
     </main>
   </body>
