--- a/public/second.html
+++ b/public/second.html
@@ -17,7 +17,7 @@
   <body>
     <header><a class="nav-link" href="index.html">Home</a></header>
     <h1>Student's points</h1>
-    <section>
+    <section id="section__pointsTable">
       <table id="pointsTable">
         <thead>
           <tr id="appendDate">
