total points and crown. update navbar

--- a/public/table.html
+++ b/public/table.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./second.css" />
-    <script src="./second.js" defer></script>
+    <link rel="stylesheet" href="./table.css" />
+    <script src="./table.js" defer></script>
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="/public/FA-6/css/all.css" />
   </head>
   <body>
-    <header><a class="nav-link" href="index.html">Home</a></header>
+    <header>
+      <a class="nav-link" href="index.html">🏠</a>
+      <a class="nav-link" href="lists.html">📑</a>
+      <a class="nav-link" href="table.html">📅</a>
+    </header>
     <h1>Student's points</h1>
     <section id="section__pointsTable">
       <table id="pointsTable">
@@ -28,87 +33,66 @@
         <tbody>
           <tr>
             <td class="studentJS">Carissa</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Cathy</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Charlotte</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Daniel</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Dora</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Eason</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Eddie</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Emma</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Eva</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Gina</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Grace</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Jenny</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Jerry</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Joanna</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Lucas</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Mia</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Pauline</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Selina</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Sharon</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Tanya</td>
-            <td class="total"></td>
           </tr>
           <tr>
             <td class="studentJS">Tony</td>
-            <td class="total"></td>
           </tr>
         </tbody>
       </table>
