--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Grandstander:wght@400;800&family=Roboto&display=swap"
       rel="stylesheet"
     />
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/bb8e411a96.js"
       crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="/FA-6/css/all.css" />
+    ></script> -->
+    <link rel="stylesheet" href="/public/FA-6/css/all.css" />
 
     <title>Random WORD</title>
 
@@ -29,7 +29,9 @@
   </head>
   <body>
     <header>
-      <a class="nav-link" href="second.html">📅</a>
+      <a class="nav-link" href="index.html">🏠</a>
+      <a class="nav-link" href="lists.html">📑</a>
+      <a class="nav-link" href="table.html">📅</a>
     </header>
     <main>
       <!-- hide logo for now -->
@@ -123,83 +125,31 @@
           Jenny<span class="count"></span><span class="reduce">⭐</span>
         </button>
       </section>
-      <div class="randomStuff">
-        <div>
-          <button class="output" id="randomWord">WORD</button>
+      <section class="randomFields">
+        <div class="randomFields__div">
+          <p id="randomWordOutput" class="randomFields__para">Random word</p>
+          <button class="randomFields__button">
+            <i
+              id="randomWordButton"
+              class="randomFields__button fa-solid fa-shuffle"
+            ></i>
+          </button>
         </div>
-        <div>
-          <button class="output" id="randomStudent">Student</button>
+        <div class="randomFields__div">
+          <p id="randomStudentOutput" class="randomFields__para">randomKid</p>
+          <button class="randomFields__button">
+            <i
+              id="randomStudentButton"
+              class="randomFields__button fa-solid fa-shuffle"
+            ></i>
+          </button>
         </div>
-      </div>
+      </section>
 
       <div class="buttons">
-        <button id="instructions">Toggle instructions</button>
-        <button class="createNew" id="createNew">New List</button>
         <button id="resetPoints">Reset Points</button>
         <button id="submitToMongodb">Submit to mongodb</button>
       </div>
-      <div id="collection"></div>
-      <section>
-        <button class="collapsible">Week 1</button>
-        <div class="weekX">
-          <ul>
-            <li>burglar</li>
-            <li>chase</li>
-            <li>goal</li>
-            <li>fall over</li>
-            <li>drum</li>
-            <li>be thankful for</li>
-            <li>Morse code</li>
-            <li>distance</li>
-            <li>plane</li>
-            <li>light</li>
-            <li>Semaphore</li>
-            <li>be used to (+Ving)</li>
-            <li>postal system</li>
-            <li>flags</li>
-            <li>treasure</li>
-            <li>explosion</li>
-            <li>quill</li>
-            <li>be willing to</li>
-            <li>target</li>
-            <li>be worried about</li>
-            <li>nightmare</li>
-            <li>peacefully</li>
-            <li>hallway</li>
-            <li>lift</li>
-          </ul>
-          <button class="addToRoster">
-            <i class="fa-regular fa-circle-check"></i>
-          </button>
-        </div>
-        <button class="collapsible">Week 1</button>
-        <div class="weekX">
-          <ul>
-            <li>unu</li>
-            <li>doi</li>
-            <li>trei</li>
-            <li>patru</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
-          </ul>
-          <button class="addToRoster">
-            <i class="fa-regular fa-circle-check"></i>
-          </button>
-        </div>
-      </section>
-      <section class="input">
-        <label for="key" class="hidden">Title:</label>
-        <input type="text" name="key" id="key" placeholder="your title here" />
-        <label class="hidden" for="word-list">Words:</label>
-        <textarea
-          placeholder="Add your words separated by comma, space or a new line"
-          name="word list"
-          id="word-list"
-          cols="20"
-          rows="10"
-        ></textarea>
-      </section>
     </main>
   </body>
 </html>
