--- a/public/table.html
+++ b/public/table.html
@@ -16,86 +16,88 @@
     <link rel="stylesheet" href="/public/FA-6/css/all.css" />
   </head>
   <body>
-    <header>
-      <a class="nav-link" href="index.html">🏠</a>
-      <a class="nav-link" href="lists.html">📑</a>
-      <a class="nav-link" href="table.html">📅</a>
-    </header>
-    <h1>Student's points</h1>
-    <section id="section__pointsTable">
-      <table id="pointsTable">
-        <thead>
-          <tr id="appendDate">
-            <th></th>
-            <th>Total</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="studentJS">Carissa</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Cathy</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Charlotte</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Daniel</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Dora</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Eason</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Eddie</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Emma</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Eva</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Gina</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Grace</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Jenny</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Jerry</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Joanna</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Lucas</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Mia</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Pauline</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Selina</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Sharon</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Tanya</td>
-          </tr>
-          <tr>
-            <td class="studentJS">Tony</td>
-          </tr>
-        </tbody>
-      </table>
-    </section>
+    <main>
+      <header>
+        <a class="nav-link" href="index.html">🏠</a>
+        <a class="nav-link" href="lists.html">📑</a>
+        <a class="nav-link" href="table.html">📅</a>
+      </header>
+      <h1>Student's points</h1>
+      <section id="section__pointsTable">
+        <table id="pointsTable">
+          <thead>
+            <tr id="appendDate">
+              <th class="sticky itemCSS"></th>
+              <th class="total">Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="studentJS itemCSS sticky">Carissa</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Cathy</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Charlotte</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Daniel</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Dora</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Eason</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Eddie</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Emma</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Eva</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Gina</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Grace</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Jenny</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Jerry</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Joanna</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Lucas</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Mia</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Pauline</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Selina</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Sharon</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Tanya</td>
+            </tr>
+            <tr>
+              <td class="studentJS itemCSS sticky">Tony</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
   </body>
 </html>
